tests/doWhile/invalid/Syntax/DO-WHILE_whilErr.wacc
# while typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  do
    skip
  whil false
end
